[tool.poetry]
name = "ProjectHope"
version = "0.1.0"
description = ""
authors = ["IK <ivandkyulev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
python-dotenv = "^0.20.0"
web3 = "^5.30.0"
requests-cache = "^0.9.5"
binance-connector = "^1.15.0"
tabulate = "^0.8.10"
pymemcache = "^3.5.2"
python-binance = "^1.0.16"
websocket-client = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
